--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,22 @@
   margin: 0px;
 }
 
+div {
+  height: auto;
+  margin: auto;
+  margin-bottom: 20px;
+  padding-bottom: 20px;
+  background-color: rgb(225, 196, 243);
+  border: 40px;
+  border-radius: 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
 h1 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: rgb(109, 87, 130);
   font-size: 40px;
   display: flex;
@@ -21,8 +35,9 @@ input {
 
 button {
 
-  background-color: rgb(157, 161, 193);
+  background-color: rgb(212, 217, 250);
   font-size: 20px;
+  padding: 10px;
 }
 
 p {
@@ -38,7 +53,27 @@ form {
 
 #result {
   display: flex;
-  justify-content: start;
-  align-items: start;
+  justify-content: center;
+  align-items: center;
 
+}
+
+/* responsive design */
+
+@media (max-width: 480px) {
+  form {
+    padding: 15px;
+    margin: 10px;
+    border-radius: 5px;
+  }
+
+  input {
+    font-size: 10px;
+    padding: 8px;
+  }
+
+  button {
+    font-size: 13px;
+    border-radius: 10px;
+  }
 }
